<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>embotech_prodriver_connector</name>
  <version>1.0.0</version>
  <description>embotech_prodriver_connector as a ROS 2 node</description>
  <maintainer email="takamasa.horibe@tier4.jp">Takamasa Horibe</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>perception_utils</depend>
  <depend>vehicle_info_util</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_projection</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_control_launch</exec_depend>
  <exec_depend>tier4_localization_launch</exec_depend>
  <exec_depend>tier4_map_launch</exec_depend>
  <exec_depend>tier4_perception_launch</exec_depend>
  <exec_depend>tier4_planning_launch</exec_depend>
  <exec_depend>tier4_sensing_launch</exec_depend>
  <exec_depend>tier4_simulator_launch</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>tier4_vehicle_launch</exec_depend>
  <exec_depend>web_controller</exec_depend>




  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
